--- a/solutions.css
+++ b/solutions.css
@@ -25,3 +25,54 @@
 .ex-4-square:hover{
     background: rgba(255, 0, 0, 0.0);
 }
+
+.ex-5-square{
+    transition: all 1.5s;
+}
+.ex-5-square:hover{
+    width: 100px;
+    height: 100px;
+    margin: 0;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
+
+.ex-7-img{
+    transition: all 1s;
+}
+.ex-7-img:hover{
+    filter: grayscale(1) sepia(0.5);
+}
+
+.ex-8-img{
+    transition: all 2s;
+}
+.ex-8-img:hover{
+    filter: saturate(20%) brightness(130%);
+    border-radius: 20px;
+}
+
+.ex-9-img{
+    transition: 2s;
+}
+.ex-9-img:hover{
+    margin: 0 0;
+    width: 577px;
+    filter: saturate(30%) sepia(30%);
+    border-radius: 20px;
+}
+
+.ex-10-icon{
+    animation-name: ex-10-animation;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 2s;
+}
+@keyframes ex-10-animation{
+
+    0%{
+        transform: rotate(360deg);
+    }
+}
