--- a/solutions.css
+++ b/solutions.css
@@ -77,7 +77,6 @@
     }
 }
 
-/* non completo */
 .ex-11-icon:hover{
     animation-name: ex-11-animation, ex-112-animation;
     animation-timing-function: linear;
@@ -141,25 +140,35 @@
 }
 
 
-/* da completare */
 .ex-13-button:hover .ex-13-top-white{
     animation-name: ex-13-animation;
     animation-timing-function: linear;
     animation-duration: 2s;
     /* animation-direction: alternate; */
-    animation-iteration-count: 1;
+    animation-iteration-count: 2;
 }
 @keyframes ex-13-animation{
 
     0%{
         left: 10%;
+        top: -10px;
     }
-
-    50%{
-        left: 60%;
+    
+    20%{
+        left: 80%;
+        top: -10px;
     }
-    100%{
-        left: 10%;
+    40%{
+        left: 80%;
+        top: 60px;
+    }
+    60%{
+        left: -10%;
+        top: 60px;
+    }
+    80%{
+        left: -10%;
+        top: -10px;
     }
 }
 .ex-13-button:hover .ex-13-bottom-white{
@@ -167,22 +176,34 @@
     animation-timing-function: linear;
     animation-duration: 2s;
     /* animation-direction: alternate; */
-    animation-iteration-count: 1;
+    animation-iteration-count: 2;
 }
 @keyframes ex-13b-animation{
 
+
     0%{
         right: 20%;
+        bottom: -10px;
     }
-
-    25%{
+    
+    20%{
         right: 80%;
+        bottom: -10px;
     }
-    50%{
-        bottom: 70px;
-        right: 100%;
-    }
-    75%{
+    40%{
         right: 80%;
+        bottom: 60px
+    }
+    /* 45%{
+        bottom: 60px;
+        right: 60%;
+    } */
+    60%{
+        bottom: 60px;
+        right: -10%;
+    }
+    80%{
+        bottom: -10px;
+        right: -10%;
     }
 }
